# arma_server_manager

./: .editorconfig  .gitignore  .prettierrc  BUILDING.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  DESIGN_REVIEW_TABLE_IMPROVEMENTS.md  README.md  docker-compose.yml  install.ps1  install.sh  main.spec  package.json  pnpm-lock.yaml  release-please-config.json
.claude/agents/: backend-python-expert.md  dev-experience-optimizer.md  frontend-architect.md
.claude/commands/: commit-and-pr.md
.cursor/commands/: component.md  minimize-changes.md  test.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-release.yml  ci.yml  release-please.yml
backend/: .env.example  Dockerfile  README.md  main.py  pyproject.toml
backend/app/: __init__.py  cli.py  config.py  database.py
backend/app/models/: __init__.py  collection.py  mod.py  mod_collection_entry.py  mod_image.py  notification.py  schedule.py  server_config.py  task_log.py
backend/app/routes/: api.py  arma3.py  frontend.py
backend/app/tasks/: background.py
backend/app/utils/: helpers.py
backend/tests/: conftest.py  test_api.py
frontend/: .env.example  .gitignore  .prettierrc  Dockerfile  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  routeTree.gen.ts
frontend/src/components/: AddModsDialog.tsx  AppSidebar.tsx  AuthLoginForm.tsx  Breadcrumb.tsx  CollectionDetailSidebar.tsx  CollectionHeader.tsx  CollectionItem.tsx  CollectionManager.tsx  CollectionsColumns.tsx  CollectionsCreateDialog.tsx  CollectionsDataTable.tsx  CollectionsList.tsx  CollectionsModsList.test.tsx  CollectionsModsList.tsx  CollectionsRemoveModDialog.tsx  CompactServerStatus.tsx  ConfirmationDialog.tsx  Dashboard.tsx  DataTableButton.tsx  LoginPage.tsx  LogoutButton.tsx  MainContent.tsx  ModAvatar.tsx  ModBrowser.tsx  ModDetailSidebar.tsx  ModsColumns.tsx  ModsDataRowActions.tsx  ModsDataTable.tsx  ModsDataTableHeader.tsx  ModsEditDialog.tsx  ModsSubscribeDialog.tsx  NavSection.tsx  NavigationCommand.tsx  NavigationCommandDialog.tsx  NotificationSettings.test.tsx  NotificationSettings.tsx  PageTitle.test.tsx  PageTitle.tsx  ScheduleDetailSidebar.tsx  SchedulesColumns.tsx  (+24 more)
frontend/src/components/common/: NavSection.tsx  NavigationCommand.tsx  NavigationCommandDialog.tsx  PageTitle.test.tsx  PageTitle.tsx  index.ts
frontend/src/components/layout/: AppSidebar.tsx  LogoutButton.tsx  MainContent.tsx  NavUser.tsx  index.ts
frontend/src/components/ui/: alert.tsx  badge.tsx  breadcrumb.tsx  button.tsx  calendar.tsx  card.tsx  chart.tsx  checkbox.tsx  collapsible.tsx  command.tsx  context-menu.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  index.ts  item.tsx  kbd.tsx  popover.tsx  progress.tsx  right-sidebar.tsx  select.tsx  separator.tsx  sheet.tsx  sidebar.tsx  sonner.tsx  table.tsx  tabs.tsx  toggle-group.tsx  toggle.tsx  tooltip.tsx
frontend/src/contexts/: CommandPaletteContext.tsx
frontend/src/features/: index.ts
frontend/src/features/auth/: LoginPage.tsx  index.ts  index.tsx  types.ts
frontend/src/features/collections/: CollectionManager.tsx  data.ts  index.ts  index.tsx  types.ts
frontend/src/features/mods/: ModBrowser.tsx  index.ts  index.tsx  types.ts
frontend/src/features/schedules/: index.tsx
frontend/src/features/server/: ServerCharts.tsx  ServerControlPanel.tsx  ServerControls.tsx  ServerMetrics.tsx  index.ts  index.tsx  types.ts
frontend/src/features/settings/: index.tsx  types.ts
frontend/src/hooks/: index.ts  use-navigation.ts  useCollections.test.ts  useCollections.ts  useCommandPalette.ts  useDataTablePagination.ts  useMods.test.ts  useMods.ts  useNotifications.ts  useSchedules.ts  useServer.ts
frontend/src/integration/: modLifecycle.test.tsx
frontend/src/lib/: breadcrumbs.test.ts  breadcrumbs.ts  button-variants.ts  cron.test.ts  cron.ts  date.test.ts  date.ts  db-config.ts  error-handler.ts  filesize.ts  mock-data.ts  modStatus.ts  polyfills.ts  query-client.ts  schedules.ts
frontend/src/lib/helpers/: blobUrlCache.ts
frontend/src/pages/: AuthPage.tsx  CollectionDetailPage.tsx  CollectionsListPage.tsx  CollectionsPage.tsx  ControlPanelPage.test.tsx  ControlPanelPage.tsx  ModsPage.test.tsx  ModsPage.tsx  SchedulesPage.tsx  ServerPage.tsx  SettingsPage.tsx
frontend/src/providers/: db-provider.tsx  query-provider.tsx
frontend/src/routes/: __root.tsx  auth.tsx  collections.tsx  control-panel.tsx  index.tsx  mod-management.tsx  mod-subscriptions.tsx  schedules.tsx  server-configs.tsx  server-control.tsx  settings.tsx
frontend/src/routes/arma3/: control-panel.tsx
frontend/src/routes/collections/: $collectionId.tsx  index.tsx
frontend/src/services/: README.md  api.ts  async.service.test.ts  async.service.ts  collections.service.ts  index.ts  mods.service.ts  notifications.service.ts  schedules.service.ts  server.service.ts
frontend/src/services/arma3/: collectionsService.ts  modService.ts  scheduleService.ts  (+1 more)
frontend/src/types/: api.ts  collections.ts  index.ts  mods.ts  server.ts  settings.ts
frontend/test/: setup.ts
scripts/: build-wheel.py
(+40 files in other folders)
